--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@langchain/anthropic": "^1.3.12",
+    "@langchain/core": "^1.1.17",
+    "@langchain/openai": "^1.2.3",
+    "langchain": "^1.2.15",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
