--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "shiki": "^3.21.0",
+    "sonner": "^2.0.7",
     "streamdown": "^2.1.0",
     "tailwind-merge": "^3.4.0",
     "tokenlens": "^1.3.1",
