--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "motion": "^12.29.2",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "openai": "^6.17.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
