prisma fixed; login and sigunp pages finished; main page rough draft

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.62",
     "ansi-to-react": "^6.2.6",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
