--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/anthropic": "^1.3.12",
     "@langchain/core": "^1.1.17",
     "@langchain/openai": "^1.2.3",
+    "@langchain/textsplitters": "^1.0.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@prisma/extension-accelerate": "^3.0.1",
@@ -39,6 +40,7 @@
     "@streamdown/code": "^1.0.1",
     "@streamdown/math": "^1.0.1",
     "@streamdown/mermaid": "^1.0.1",
+    "@types/pdf-parse": "^1.1.5",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.62",
     "ansi-to-react": "^6.2.6",
@@ -55,6 +57,7 @@
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "openai": "^6.17.0",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
