--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-auth": "^4.24.13",
     "openai": "^6.17.0",
     "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.2",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
