packages added for doc and docx parsing

--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "embla-carousel-react": "^8.6.0",
     "langchain": "^1.2.15",
     "lucide-react": "^0.563.0",
+    "mammoth": "^1.11.0",
     "media-chrome": "^4.17.2",
     "motion": "^12.29.2",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
+    "officeparser": "^6.0.4",
     "openai": "^6.17.0",
     "pdf-parse": "^2.4.5",
     "pdf2json": "^4.0.2",
